Edits to update

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/loc.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+
+	<!-- Jun Lam extra junlam.css -->
+	<link rel="stylesheet" href="css/junlam.css">
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -34,8 +37,8 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-	<!-- Flaticons  -->
-	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+	<!-- Flaticons <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css"> -->
+
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -49,6 +52,8 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+
+
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -58,7 +63,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Jun Lam</a></h1>
-				<span class="position"><a href="#">Developer, Investor, CEO</a></span>
+				<span class="position"><a href="#">Connector, Developer, Feminist</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -77,20 +82,7 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/img_bg_2.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner js-fullheight">
-					   					<div class="desc" style="margin-left:140px">
-						   					<h1>Hi! <br>I'm Jun</h1>
-						   					</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
+
 				   	<li style="background-image: url(images/img_bg_1.jpg);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
@@ -98,7 +90,35 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>I am <br>a Property Developer</h1>
+						   					<h1>Capital</h1>
+										</div>
+					   				</div>
+					   			</div>
+					   		</div>
+				   		</div>
+				   	</li>
+						<li style="background-image: url(images/developer_w.jpg);">
+				   		<div class="overlay"></div>
+				   		<div class="container-fluid">
+				   			<div class="row">
+					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+					   				<div class="slider-text-inner">
+					   					<div class="desc">
+						   					<h1>Cashflow</h1>
+										</div>
+					   				</div>
+					   			</div>
+					   		</div>
+				   		</div>
+				   	</li>
+						<li style="background-image: url(images/calm.jpg);">
+				   		<div class="overlay"></div>
+				   		<div class="container-fluid">
+				   			<div class="row">
+					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+					   				<div class="slider-text-inner">
+					   					<div class="desc">
+						   					<h1>Calm</h1>
 										</div>
 					   				</div>
 					   			</div>
@@ -113,49 +133,76 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="col-md-12">
-									<div class="about-desc">
-										<span class="heading-meta">About Us</span>
-										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Jun Lam</strong> Thanks for dropping by. This site still at inception but not for long!
-Please leave your email below and I’ll be in touch.</p>
-										<p>...</p>
-									</div>
+							<div id="aboutsection">
+								<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+								  <div class="col-md-12">
+								    <div class="about-desc">
+								      <span class="heading-meta"></span>
+								      <h2 class="colorlib-heading">Who Am I?</h2>
+								      <p><strong>Hi, I'm Jun Lam.</strong> Ever wondered what it would be like to drop everything you know and the security of your
+								        comfortable life and take off into the unknown? That’s what I did 2 years ago, leaving my law
+								        practise (something I had been doing for 17 years), my family and friends in Australia and going to
+								        live in the UK to start a whole new business, and life.
+								        </p><p>
+								        If you are an entrepreneur or an investor, you might relate. Starting a business or investing into a
+								        new project may not be as drastic as upping your roots, but it is similar as it is new and exciting and
+								        full of potential. It isn’t the easiest route though is it, or we’d all be doing it? The 3 ‘C’ hurdles in any
+								        new venture or project? Capital, Cashflow, Clients. Investors have their own set of hurdles too –
+								        Capital growth and Cashflow being the two big ones.
+								        </p>
+								        <span class="heading-meta">Like you, I wear many hats in my life. </span>
+								      </div>
+								  </div>
 								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
-									<div class="services color-1">
-										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Property Investor</h3>
-									</div>
-								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<div class="services color-2">
-										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Fund Connector</h3>
-									</div>
-								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-									<div class="services color-3">
-										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Investor</h3>
-									</div>
-								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
-									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Lawyer</h3>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-									<div class="hire">
+								<div id="ServicesGrp">
+								<div class="row">
+								  <div class="col-md-4 animate-box"  data-toggle="collapse" href="#togethertext" role="button" data-parent="#ServicesGrp" aria-expanded="true" aria-controls="togethertext">
+											<div class="services color-1">
+								      <span class="icon2"><i class="junlam jltogether"></i></span>
+								      <h3>Connector</h3>
+								    </div>
+								  </div>
+								  <div class="col-md-4 animate-box" data-toggle="collapse" href="#developertext" role="button" data-parent="#ServicesGrp" aria-expanded="true" aria-controls="developertext">
+										<div class="services color-2">
+								      <span class="icon2"><i class="junlam jldeveloper"></i></span>
+								      <h3>Developer</h3>
+								    </div>
+
+								  </div>
+								  <div class="col-md-4 animate-box" data-toggle="collapse" href="#rolestext" role="button" data-parent="#ServicesGrp" aria-expanded="true" aria-controls="rolestext">
+
+								    <div class="services color-3">
+								      <span class="icon2"><i class="junlam jlroles"></i></span>
+								      <h3>Wife, Mother, Photographer</h3>
+								    </div>
+								  </div>
+</div>
+									<div class="row" class="accordion-group">
+										<div class="col-md-12 animate-box" >
+											<div class="card card-body collapse in" id="togethertext">
+												<p>As <a href="http://togethercapital.money">Together Capital</a>, I’m a connector – helping cutting edge and inspired businesses overcome their Capital hurdles by connecting them with savvy HNW investors.
+												</p>
+											</div>
+											<div class="card card-body collapse in" id="developertext">
+												<p>As <a href="http://middleparkprojects.com">Middle Park Projects</a>, I am a property developer – a business my husband and I started when we came to the UK. We build great homes, taking advantage of England’s planning laws and huge housing demand to create amazing Cashflow for our investors.</p>
+											</div>
+											<div class="card card-body collapse in" id="rolestext">
+												<p>I am a mother, wife, feminist, humanitarian, amateur photographer, imaginary chef extraordinaire and soon to be expert speed reader, all as I strive to maintain Calm at home.</p>
+											</div>
 										</div>
+									</div>
+</div>
+								<div class="row">
+								  <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+								    <div class="hire">
+											 	<p>So if you have a thriving business seeking to expand, an innovative start up seeking a boost to get you to the next level, <a href="#" data-nav-section="contact">let’s talk.</a> If you are a HNW investor looking to invest in businesses or projects with great returns that are secure, and seeking to diversity in industry, I would love to show you the <a href="#" data-nav-section="contact">opportunities</a> in my pipeline. If you are a property investor looking to diversity geographically, specifically into the UK, let’s <a href="#" data-nav-section="contact">build wealth together</a>. If you are starting a new healthy lifestyle and need some ideas, I can <a href="#" data-nav-section="contact">point you</a> to a heap of resources especially in the areas of keto and plant based foods as we have been experimenting for 4 years with our diet.</p>
+								      </div>
+								  </div>
 								</div>
 							</div>
+
+
+
 						</div>
 					</div>
 				</div>
@@ -167,8 +214,8 @@ Please leave your email below and I’ll be in touch.</p>
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Get in Touch</span>
-							<h2 class="colorlib-heading">Contact</h2>
+							<span class="heading-meta"></span>
+							<h2 class="colorlib-heading">Get in Touch</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -196,7 +243,8 @@ Please leave your email below and I’ll be in touch.</p>
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://+447393610502">+44 7393610 502</a></p>
+									<p><a href="tel://+447393610502">+44 7393610 502</a><br/>
+										<a href="https://wa.me/447393610502"><img src="images/whatsapp.png" width="32px" alt="WhatsApp me" /></a></p>
 								</div>
 							</div>
 						</div>
@@ -236,6 +284,8 @@ Please leave your email below and I’ll be in touch.</p>
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-
+	<script>
+		//	$("#aboutsection").load("about.html");
+	</script>
 	</body>
 </html>
