--- a/index_old.html
+++ b/index_old.html
@@ -37,7 +37,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
-	<!-- Flaticons <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css"> -->
+	<!-- Flaticons  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css"> (removed as error CCL)-->
 
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -45,15 +45,18 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
+
+
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
 
-
-
+	
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -90,35 +93,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>Capital</h1>
-										</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-						<li style="background-image: url(images/developer_w.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1>Cashflow</h1>
-										</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-						<li style="background-image: url(images/calm.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1>Calm</h1>
+						   					<h1>I am <br>a Capital Developer</h1>
 										</div>
 					   				</div>
 					   			</div>
@@ -133,88 +108,23 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
-							<div id="aboutsection">
-								<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-								  <div class="col-md-12">
-								    <div class="about-desc">
-								      <span class="heading-meta"></span>
-								      <h2 class="colorlib-heading">Who Am I?</h2>
-								      <p><strong>Hi I'm Jun Lam</strong> Ever wondered what it would be like to drop everything you know and the security of your
-								        comfortable life and take off into the unknown? That’s what I did 2 years ago, leaving my law
-								        practise (something I had been doing for 17 years), my family and friends in Australia and going to
-								        live in the UK to start a whole new business, and life.
-								        </p><p>
-								        If you are an entrepreneur or an investor, you might relate. Starting a business or investing into a
-								        new project may not be as drastic as upping your roots, but it is similar as it is new and exciting and
-								        full of potential. It isn’t the easiest route though is it, or we’d all be doing it? The 3 ‘C’ hurdles in any
-								        new venture or project? Capital, Cashflow, Clients. Investors have their own set of hurdles too –
-								        Capital growth and Cashflow being the two big ones.
-								        </p>
-								        <span class="heading-meta">Like you, I wear many hats in my life. </span>
-								      </div>
-								  </div>
-								</div>
-								<div id="ServicesGrp">
-								<div class="row">
-								  <div class="col-md-4 animate-box"  data-toggle="collapse" href="#togethertext" role="button" data-parent="#ServicesGrp" aria-expanded="true" aria-controls="togethertext">
-											<div class="services color-1">
-								      <span class="icon2"><i class="junlam jltogether"></i></span>
-								      <h3>Connector</h3>
-								    </div>
-								  </div>
-								  <div class="col-md-4 animate-box" data-toggle="collapse" href="#developertext" role="button" data-parent="#ServicesGrp" aria-expanded="true" aria-controls="developertext">
-										<div class="services color-2">
-								      <span class="icon2"><i class="junlam jldeveloper"></i></span>
-								      <h3>Developer</h3>
-								    </div>
-
-								  </div>
-								  <div class="col-md-4 animate-box" data-toggle="collapse" href="#rolestext" role="button" data-parent="#ServicesGrp" aria-expanded="true" aria-controls="rolestext">
-
-								    <div class="services color-3">
-								      <span class="icon2"><i class="junlam jlroles"></i></span>
-								      <h3>Wife, Mother, Photographer</h3>
-								    </div>
-								  </div>
-</div>
-									<div class="row" class="accordion-group">
-										<div class="col-md-12 animate-box" >
-											<div class="card card-body collapse in" id="togethertext">
-												As <a href="http://togethercapital.money">Together Capital</a>, I’m a connector – helping cutting edge and inspired businesses overcome their Capital hurdles by connecting them with savvy HNW investors.
-											</div>
-											<div class="card card-body collapse" id="developertext">
-												As <a href="http://middpleparkprojects.com">Middle Park Projects</a>, I am a property developer – a business my husband and I started when we came to the UK. We build great homes, taking advantage of England’s planning laws and huge housing demand to create amazing Cashflow for our investors.
-											</div>
-											<div class="card card-body collapse" id="rolestext">
-												I am a mother, wife, feminist, humanitarian, amateur photographer, imaginary chef extraordinaire and soon to be expert speed reader, all as I strive to maintain Calm at home.
-											</div>
-										</div>
-									</div>
-</div>
-								<div class="row">
-								  <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-								    <div class="hire">
-											So if you have a thriving business seeking to expand, an innovative start up seeking a boost to get you to the next level, <a href="#" data-nav-section="contact">let’s talk.</a> If you are a HNW investor looking to invest in businesses or projects with great returns that are secure, and seeking to diversity in industry, I would love to show you the opportunities in my pipeline. If you are a property investor looking to diversity geographically, specifically into the UK, let’s build wealth together. If you are starting a new healthy lifestyle and need some ideas, I can point you to a heap of resources especially in the areas of keto and plant based foods as we have been experimenting for 4 years with our diet.
-								      </div>
-								  </div>
-								</div>
-							</div>
-
-
-
+							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+								<div id="aboutsection"></div>
 						</div>
 					</div>
 				</div>
 			</section>
-
+			<script>
+			    $("#aboutsection").load("about.html");
+			</script>
 
 
 			<section class="colorlib-contact" data-section="contact">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta"></span>
-							<h2 class="colorlib-heading">Get in Touch</h2>
+							<span class="heading-meta">Get in Touch</span>
+							<h2 class="colorlib-heading">Contact</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -242,8 +152,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://+447393610502">+44 7393610 502</a><br/>
-										<a href="https://wa.me/447393610502"><img src="images/whatsapp.png" width="32px" alt="WhatsApp me" /></a></p>
+									<p><a href="tel://+447393610502">+44 7393610 502</a></p>
 								</div>
 							</div>
 						</div>
@@ -265,8 +174,7 @@
 
 	</div><!-- end:colorlib-page -->
 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
+
 	<!-- jQuery Easing -->
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
@@ -283,8 +191,6 @@
 
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-	<script>
-		//	$("#aboutsection").load("about.html");
-	</script>
+
 	</body>
 </html>
